Initial commit - Maquetado visual base listo para comenzar a agregar funcionalidades

--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,29 @@
-.App {
+.Inicio {
   text-align: center;
+  padding-top: 11rem;
+  padding-right: 12rem;
 }
 
+
+.Registro {
+  text-align: center;
+  padding-top: 11rem;
+}
+
+.Consulta {
+  text-align: center;
+  padding-top: 11rem;
+}
+
+
+body {
+  background-color: #ff9900;
+  margin: 0px auto;
+  padding: 0px;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -26,13 +39,4 @@
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
