--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,13 @@ body #Header{
   color: #921214;
 }
 
+#LinkButton {
+  font-family: 'Roboto', sans-serif;
+  color: white;
+
+}
+
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
